--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>INST 630 Final Project</title>
 
     <!-- The website stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <!-- The website JavaScript file -->
     <script src="main.js" type="module" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Welcome to my INST 630 Final Project!</h1>
-    <button id="stations">Show Stations</button>
-    <button id="lines">Show Lines</button>
-    <button id="positionsL">Show Train Positions List</button>
-    <button id="positions">Show Train Positions</button>
-    <button id="hide">Clear data</button>
-    <button id="helper">Do helper stuff</button>
-    
+    <!-- TODO: set these options dynamically -->
+    <label for="region-select">Map Region: </label>
+    <select name="regions" id="region-select">
+      <option value="All">All</option>
+      <option value="DC">DC</option>
+    </select>
+    <div class="buttons-right">
+      <button id="stations">Show Stations</button>
+      <button id="lines">Show Lines</button>
+      <button id="positionsL">Show Train Positions List</button>
+      <button id="hide">Clear data</button>
+      <button id="helper">Do helper stuff</button>
+    </div>
+
     <div id="data"></div>
-</body>
+  </body>
 </html>
