Add sidebar, improve readability

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
       <option value="All">All</option>
       <option value="DC">DC</option>
     </select>
-    <div class="buttons-right">
+    <div class="sidebar">
       <button id="stations">Show Stations</button>
       <button id="lines">Show Lines</button>
       <button id="positionsL">Show Train Positions List</button>
       <button id="hide">Clear data</button>
       <button id="helper">Do helper stuff</button>
+      <div id="sidebar-data"></div>
     </div>
 
     <div id="data"></div>
