--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="styles.css" />
 
     <!-- The website JavaScript file -->
-    <script src="main.js" type="module" defer></script>
+    <script src="src/main.js" type="module" defer></script>
   </head>
   <body>
     <h1>Welcome to my INST 630 Final Project!</h1>
+    <!-- TODO: create nav header with Map and Dashboard views -->
     <!-- TODO: set these options dynamically -->
     <label for="region-select">Map Region: </label>
     <select name="regions" id="region-select">
