--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
           <option value="All">All</option>
           <option value="DC">DC</option>
         </select>
+        <div>
+          <input type="checkbox" id="stn-labels" name="stn-labels" />
+          <label for="stn-labels">Show station labels</label>
+        </div>
         <div id="map-vis-content" class=""></div>
         <div id="line-vis-content" class="hidden"></div>
       </main>
