--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <title>Metro Visualizer</title>
   </head>
   <body>
-    <header class="header-target">
-      <button class="btn-back">Back</button>
-      <h1 class="heading-text"></h1>
-    </header>
-    <main class="content-target"></main>
+    <div class="app-wrapper">
+      <header class="header-target">
+        <button class="btn-back">Back</button>
+        <h1 class="heading-text"></h1>
+      </header>
+      <main class="content-target"></main>
+    </div>
   </body>
 </html>
